--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,137 @@
 name: hydrasim
 channels:
-  - bioconda
   - conda-forge
+  - bioconda
   - defaults
 dependencies:
-  - python
-  - nextflow
-  - badread
-  - ncbi-datasets-cli
-  - rasusa
-  - sra-tools
-  - pip
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - alsa-lib=1.2.12=h4ab18f5_0
+  - badread=0.4.1=pyhdfd78af_0
+  - brotli=1.1.0=hd590300_1
+  - brotli-bin=1.1.0=hd590300_1
+  - bzip2=1.0.8=h4bc722e_7
+  - c-ares=1.32.3=h4bc722e_0
+  - ca-certificates=2024.7.4=hbcca054_0
+  - cairo=1.18.0=hbb29018_2
+  - certifi=2024.7.4=pyhd8ed1ab_0
+  - contourpy=1.2.1=py312h8572e83_0
+  - coreutils=8.25=1
+  - curl=8.9.0=h18eb788_0
+  - cycler=0.12.1=pyhd8ed1ab_0
+  - expat=2.6.2=h59595ed_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_2
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.53.1=py312h41a817b_0
+  - freetype=2.12.1=h267a509_2
+  - giflib=5.2.2=hd590300_0
+  - graphite2=1.3.13=h59595ed_1003
+  - harfbuzz=8.5.0=hfac3d4d_0
+  - icu=73.2=h59595ed_0
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.5=py312h8572e83_1
+  - krb5=1.21.3=h659f571_0
+  - lcms2=2.16=hb7c19ff_0
+  - ld_impl_linux-64=2.40=hf3520f5_7
+  - lerc=4.0.0=h27087fc_0
+  - libblas=3.9.0=23_linux64_openblas
+  - libbrotlicommon=1.1.0=hd590300_1
+  - libbrotlidec=1.1.0=hd590300_1
+  - libbrotlienc=1.1.0=hd590300_1
+  - libcblas=3.9.0=23_linux64_openblas
+  - libcups=2.3.3=h4637d8d_4
+  - libcurl=8.9.0=hdb1bdb2_0
+  - libdeflate=1.20=hd590300_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=hd590300_2
+  - libexpat=2.6.2=h59595ed_0
+  - libffi=3.4.2=h7f98852_5
+  - libgcc=7.2.0=h69d50b8_2
+  - libgcc-ng=14.1.0=h77fa898_0
+  - libgfortran-ng=14.1.0=h69a702a_0
+  - libgfortran5=14.1.0=hc5f4f2c_0
+  - libglib=2.80.3=h8a4344b_1
+  - libgomp=14.1.0=h77fa898_0
+  - libiconv=1.17=hd590300_2
+  - libjpeg-turbo=3.0.0=hd590300_1
+  - liblapack=3.9.0=23_linux64_openblas
+  - libnghttp2=1.58.0=h47da74e_1
+  - libnsl=2.0.1=hd590300_0
+  - libopenblas=0.3.27=pthreads_hac2b453_1
+  - libpng=1.6.43=h2797004_0
+  - libsqlite=3.46.0=hde9e2c9_0
+  - libssh2=1.11.0=h0841786_0
+  - libstdcxx-ng=14.1.0=hc0a3c3a_0
+  - libtiff=4.6.0=h1dd3fc0_3
+  - libuuid=2.38.1=h0b41bf4_0
+  - libwebp-base=1.4.0=hd590300_0
+  - libxcb=1.16=hd590300_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libxml2=2.12.7=h4c95cb1_3
+  - libzlib=1.3.1=h4ab18f5_1
+  - matplotlib-base=3.9.1=py312h9201f00_0
+  - munkres=1.0.7=py_1
+  - ncbi-datasets-cli=16.24.1=ha770c72_0
+  - ncbi-vdb=3.1.1=h4ac6f70_1
+  - ncurses=6.5=h59595ed_0
+  - nextflow=24.04.3=hdfd78af_0
+  - numpy=2.0.1=py312h1103770_0
+  - openjdk=21.0.0=haa376d0_0
+  - openjpeg=2.5.2=h488ebb8_0
+  - openssl=3.3.1=h4bc722e_2
+  - ossuuid=1.6.2=hf484d3e_1000
+  - packaging=24.1=pyhd8ed1ab_0
+  - pcre2=10.44=h0f59acf_0
+  - perl=5.22.2.1=0
+  - perl-threaded=5.32.1=hdfd78af_1
+  - perl-uri=1.71=0
+  - perl-xml-libxml=2.0124=0
+  - perl-xml-namespacesupport=1.11=0
+  - perl-xml-sax=0.99=0
+  - perl-xml-sax-base=1.08=0
+  - pillow=10.4.0=py312h287a98d_0
+  - pip=24.0=pyhd8ed1ab_0
+  - pixman=0.43.2=h59595ed_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - pyparsing=3.1.2=pyhd8ed1ab_0
+  - python=3.12.4=h194c7f8_0_cpython
+  - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python-edlib=1.3.9=py312h28adbb1_7
+  - python_abi=3.12=4_cp312
+  - qhull=2020.2=h434a139_5
+  - rasusa=2.0.0=h715e4b3_2
+  - readline=8.2=h8228510_1
+  - scipy=1.14.0=py312hc2bc53b_1
+  - setuptools=71.0.4=pyhd8ed1ab_0
+  - six=1.16.0=pyh6c4a22f_0
+  - sra-tools=3.1.1=h4304569_0
+  - tk=8.6.13=noxft_h4845f30_101
+  - tzdata=2024a=h0c530f3_0
+  - wheel=0.43.0=pyhd8ed1ab_1
+  - xorg-fixesproto=5.0=h7f98852_1002
+  - xorg-inputproto=2.3.2=h7f98852_1002
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.1.1=hd590300_0
+  - xorg-libsm=1.2.4=h7391055_0
+  - xorg-libx11=1.8.9=hb711507_1
+  - xorg-libxau=1.0.11=hd590300_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxfixes=5.0.3=h7f98852_1004
+  - xorg-libxi=1.7.10=h7f98852_0
+  - xorg-libxrender=0.9.11=hd590300_0
+  - xorg-libxt=1.3.0=hd590300_1
+  - xorg-libxtst=1.2.4=h4bc722e_0
+  - xorg-recordproto=1.14.2=h7f98852_1002
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h0b41bf4_1003
+  - xorg-xproto=7.0.31=h7f98852_1007
+  - xz=5.2.6=h166bdaf_0
+  - zlib=1.3.1=h4ab18f5_1
+  - zstd=1.5.6=ha6fb4c9_0
+prefix: /home/phe.gov.uk/nicholas.ellaby/anaconda3/envs/hydrasim
