dev/added test parameters for input files to test.config

--- a/conf/test.config
+++ b/conf/test.config
@@ -15,8 +15,8 @@ params {
     config_profile_description = 'Full test dataset to check pipeline function'
 
     // Input data for full size test
-    input               = 'https://raw.githubusercontent.com/nf-core/test-datasets/nanoseq/3.0/samplesheet/samplesheet_full.csv'
-    protocol            = 'cDNA'
+    dataset_csv               = 'https://raw.githubusercontent.com/nfellaby/hydrasim/dev/test/test_data/test_datasets_for_hcid_and_respiratory.csv'
+    reference_csv             = 'https://raw.githubusercontent.com/nfellaby/hydrasim/dev/test/test_data/test_hcid_accessions.csv'
     skip_demultiplexing = true
     skip_fusion_analysis= true
     skip_modification_analysis=true
