--- a/conf/test.config
+++ b/conf/test.config
@@ -1,18 +1,18 @@
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Nextflow config file for running full-size tests
+    Nextflow config file for running tests
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Defines input files and everything required to run a full size pipeline test.
+    Defines input files and everything required to run a pipeline test.
 
     Use as follows:
-        nextflow run nf-core/nanoseq -profile test_full,<docker/singularity> --outdir <OUTDIR>
+        nextflow run nf-core/nanoseq -profile test,<docker/singularity> --outdir <OUTDIR>
 
 ----------------------------------------------------------------------------------------
 */
 
 params {
-    config_profile_name        = 'Full test profile'
-    config_profile_description = 'Full test dataset to check pipeline function'
+    config_profile_name        = 'test profile'
+    config_profile_description = 'test dataset to check pipeline function'
 
     // Input data for full size test
     dataset_csv               = 'https://raw.githubusercontent.com/nfellaby/hydrasim/dev/test/test_data/test_datasets_for_hcid_and_respiratory.csv'
