dev/edited test.config

--- a/conf/test.config
+++ b/conf/test.config
@@ -11,7 +11,7 @@
 */
 
 params {
-    config_profile_name        = 'test profile'
+    config_profile_name        = 'Test profile'
     config_profile_description = 'test dataset to check pipeline function'
 
     // Input data for full size test
