dev/edited main to run simulated_datasets

--- a/nextflow.config
+++ b/nextflow.config
@@ -114,7 +114,10 @@ profiles {
         executor.cpus          = 16
         executor.memory        = 60.GB
     }
-    test      { includeConfig 'conf/test.config'      }
+
+    test { 
+        includeConfig 'conf/test.config'      
+    }
 }
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
