--- a/conf/test.config
+++ b/conf/test.config
@@ -5,7 +5,7 @@
     Defines input files and everything required to run a pipeline test.
 
     Use as follows:
-        nextflow run nf-core/nanoseq -profile test,<docker/singularity> --outdir <OUTDIR>
+        nextflow run nfellaby/hydrasim -profile test,docker
 
 ----------------------------------------------------------------------------------------
 */
