dev/read in input variables first, then call storeDir

--- a/conf/params.config
+++ b/conf/params.config
@@ -40,6 +40,8 @@ params {
     output_dir = "output" // Output directory
 
     // Generate Recipes parameters
+    store_dir = "store_dir"
+
     reference_csv = null
     reference_dir = "/store/references"
 
