dev/checking out coverages

--- a/conf/params.config
+++ b/conf/params.config
@@ -42,7 +42,7 @@ params {
     // Generate Recipes parameters
 
     reference_csv = null
-    reference_dir = "/store/references"
+    reference_dir = "store/references"
 
     dataset_csv = ""
     dataset_index = "public_database_accession"
