dev/revered changes to test config

--- a/conf/test.config
+++ b/conf/test.config
@@ -15,7 +15,7 @@ params {
     config_profile_description = 'test dataset to check pipeline function'
 
     // Input data for full size test
-    dataset_csv               = "/shared/team/synthetic_data/test_data/test_hydrasim_S3_datasets_for_hcid_and_respiratory.csv"
-    reference_csv             = "/shared/team/synthetic_data/test_data/test_hcid_accessions.csv"
+    dataset_csv               = "${projectDir}/test/test_data/test_hydrasim_S3_datasets_for_hcid_and_respiratory.csv"
+    reference_csv             = "${projectDir}/test/test_data/test_hcid_accessions.csv"
 
 }
